--- a/.github/workflows/lab4-workflow.yml
+++ b/.github/workflows/lab4-workflow.yml
@@ -1,11 +1,21 @@
 name: Publish Package to GitHub NPM Registry
 
-on: 
-  ????: 
-    
+on:
+  release:
+    types: published
+
 jobs:
-    npm-package:
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout Repository
-          uses: actions/checkout@v4
+  npm-package:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          registry-url: 'https://npm.pkg.github.com/'
+
+      - name: Install the npm dependencies
+        run: npm install
